--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,15 +15,11 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-
-        <activity android:name=".julio"></activity>
-
-        <activity android:name=".mayaracarol"></activity>
-
-        <activity android:name=".gabiActivity"></activity>
-
-        <activity android:name=".toniolli"></activity>
-
+        <activity android:name=".julio" />
+        <activity android:name=".mayaracarol" />
+        <activity android:name=".gabiActivity" />
+        <activity android:name=".toniolli" />
+        <activity android:name=".Turi"></activity>
     </application>
 
 </manifest>
